# axum-rspack

./: .gitignore  Cargo.toml  README.md  package.json  tsconfig.json
frontend/: index.ts  worker.ts
src/: dev_routes.rs  main.rs  watcher.rs
